--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": false,
   "dependencies": {
     "request": "^2.87.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "yargs": "^12.0.1"
   }
 }
