--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "chalk": "^2.4.1",
     "find-up": "^3.0.0",
     "inquirer": "^6.0.0",
+    "node-emoji": "^1.8.1",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
+    "url-regex": "^4.1.1",
     "yargs": "^12.0.1"
   }
 }
